Overshadow immutable types (#483)
* Overshadow immutable types

* Overshadow all dialob-api immutable types

* Convert Pair to record

* Convert Label to record

* Convert event types to records

* Convert ErrorsResponse and CurrentUser types to records

* Overshadow Immutable types

* Convert ApiKey to record

* Convert FormMetadataRow to record

* Convert NodeId to record

* Test case improvement

* Convert ErrorId to record

* Convert ValueSetId to record

* Convert ItemIdPartial to record

* Convert ItemIndex to record

* Add some tests for id types

* Convert ItemRef to record

* Cleanup ItemId types

* Convert Span to record

* any number of digits for faction second

* Add ActionsFactoryTest

* Add ApiKeyTest

* Add FormActionsTest

* Add FormsRestServiceControllerTest

* Add more tests

* Add more tests

* Add more tests

* Add more tests

* Move test to correct project

* Add DialobCsvToFormParserTest

* Test withId and withRev

* Add tests

* Add tests

* Add tests

* Do not generate Mutable types

* Test ErrorState serialization

* Test ErrorState update

* Test ErrorState Utils

* Add DelegateCurrentUserProviderTest

* Reject empty ids

* Clean ups

* Test FormS3DatabaseTest.findAllMetadata

* Test QuestionnaireS3DatabaseTesta

* Add license header to QuestionnaireS3DatabaseTest.java